@@ -237,6 +237,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #25609: Introduce contextlib.AbstractContextManager and
+  typing.ContextManager.
+
 - Issue #26709: Fixed Y2038 problem in loading binary PLists.
 
 - Issue #23735: Handle terminal resizing with Readline 6.3+ by installing our
